--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@prisma/client": "^4.12.0"
+		"@prisma/client": "^4.12.0",
+		"@sveltejs/adapter-vercel": "^2.4.1"
 	}
 }
